Horizontal alignment main post page fixed.

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -139,14 +139,11 @@ body
         opacity:none
     .post-content-wrapper
         position:relative
-        float:left
-        width:250px
-        margin-left: 25px
+        margin-left: 150px
         margin-top: 5px
         .post-content-container
             .post-content
                 padding:15px
-                width:900px
                 .post-title
                     text-decoration:none
                     color:white
@@ -157,6 +154,8 @@ body
                 .post-comment
                     text-decoration:none
                     color:grey
+                    float: right
+                    margin-right: 100px
     .post-body-detail
         position: absolute
         padding:15px 0px 0px 15px
@@ -211,8 +210,6 @@ body
         position: relative
         .submit-background
             position: absolute
-            background: white
-            opacity: 0.3
             height: 100%
             width: 100%
         .submit-foreground
@@ -252,61 +249,56 @@ body
                 color:white
             .filter
                 font-weight: 300
-            .btn
-                margin-top: 3px
-                width:160px
-                height:40px
-                border: none
-                position:relative
-                text-align: center
-                background: rgba(255, 255, 255, .3)
-                font-size: 1.5em
-                text-decoration: none
-                color: white
-            .checkbox
-                -webkit-appearance: none
-                background-color: transparent-white
-                box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05)
-                padding: 7px
-                display: inline-block
-                position: relative
-            .checkbox, .checkbox:checked:active
-                box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1)
-            .checkbox: checked
-                background-color: #e9ecee
-                border: 1px solid #adb8c0 
-                box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px-12px rgba(255,255,255,0.1)
-                color: #99a1a7
-            .checkbox:checked:after
-                content: '\2715'
-                font-size: 12px
-                position: absolute
-                top: 0px
-                left: 3px
-                color: #FFF
             .tag-label-class
                 display: inline-block
                 margin-right: 5px
             #select-tag
                 width: -webkit-calc(unquote("100% - 170px"))
 
-
-
+/*Submit Button Styling*/
+input[type="submit"]
+    margin-top: 3px
+    width:160px
+    height:40px
+    border: none
+    position:relative
+    text-align: center
+    background: rgba(255, 255, 255, .3)
+    font-size: 1.5em
+    text-decoration: none
+    color: white
+/*Checkboxe Styling*/
+input[type="checkbox"]
+    -webkit-appearance: none
+    background-color: transparent-white
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05)
+    padding: 7px
+    display: inline-block
+    position: relative
+input[type="checkbox"], input[type="checkbox"]:checked:active
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1)
+input[type="checkbox"]: checked
+    background-color: #e9ecee
+    border: 1px solid #adb8c0 
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px-12px rgba(255,255,255,0.1)
+    color: #99a1a7
+input[type="checkbox"]:checked:after
+    content: '\2715'
+    font-size: 12px
+    position: absolute
+    top: 0px
+    left: 3px
+    color: #FFF
 
 @media screen and (max-width: 980px)
     .post
         margin-left:25px
-        .post-content-wrapper
-            .post-content-container
-                .post-content
-                    width:600px
+
 
 @media screen and (max-width: 768px)
     .post
-        .post-content-wrapper
-            .post-content-container
-                .post-content
-                    width: 500px
+        margin-left:25px
+
 
 
 @media screen and (max-width: 480px)
@@ -323,15 +315,11 @@ body
             a
                 font-size:0.8em
         .post-content-wrapper
+            margin-left: 120px
             position: absolute
-            width: 200px
-            top: 50%
-            margin-top: -40px
-            left: 30%
             font-size:0.8em
             .post-content-container
                 .post-content
-                    width:200px
                     padding:0px
     .splash
         height:55%
